# DNS-verification

./: .gitignore  census_rr_type_counts.csv  census_types_count.sh  count_rr_types.py
VeriDNS/: run_offline_exp.py
aether/dnsverify/: Cargo.toml  README.md  build_release.sh  output_loop_example.csv
aether/dnsverify/datasets/revision-microbench/cname-loop/: example.test.zone
aether/dnsverify/datasets/revision-microbench/cname-wildcard/: example.test.zone  metadata.json
aether/dnsverify/datasets/revision-microbench/delegation-glue/: example.test.zone
aether/dnsverify/datasets/revision-microbench/dname-subspace/: example.test.zone
aether/dnsverify/datasets/root-zone/: metadata.json  root.zone  root.zone.raw  zones.csv
aether/dnsverify/examples/: zones.csv
aether/dnsverify/examples/example.com/: example.com.zone  loop.example.com.zone  metadata.json
aether/dnsverify/examples/paper-went/: metadata.json  updates.csv  went.com.zone  went.net.zone  where.went.com.zone  zones.csv
aether/dnsverify/scripts/: filter_root_zone.py
aether/dnsverify/src/: lec.rs  lib.rs  main.rs  record.rs  utils.rs  zonefile_parser.rs
aether/dnsverify/src/lec/: action.rs  label_info.rs  name_server_bdd.rs  query.rs  record_bdd.rs  trace_log.rs  zonefile_bdd.rs
experiments/: README-aether-revision.md  README.md  compare_property_sanitized.py  merge_aether_revision_results.py  merge_incremental_results.py  merge_property_results.py  plot_aether_revision_results.py  plot_incremental_results.py  plot_property_results.py  requirements-veridns.txt  run_aether_revision_experiments.py  (+8 more)
(+1264 files in other folders)
