[package]
name = "dnsv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.5"
log = "0.4.22"
pest = "2"
pest_derive = "2"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_derive = "1.0.213"
serde_json = "1.0.132"
sha2 = "0.10"
strum = "0.26.3"
strum_macros = "0.26.4"

oxidd = "0.9.0"
oxidd-core = "0.9.0"
oxidd-cache = "0.9.0"
oxidd-derive = "0.9.0"
oxidd-manager-index = "0.9.0"
oxidd-reorder = "0.4.0"
oxidd-dump = "0.4.0"
oxidd-rules-bdd = "0.9.0"
rayon = "1.10.0"
